--- a/10_day/harib07d/Makefile
+++ b/10_day/harib07d/Makefile
@@ -70,7 +70,7 @@ img :
 
 run :
 	make img
-	qemu-system-i386 -fda haribote.img	# "-fda" for floppy disk
+	qemu-system-i386 -fda haribote.img -monitor stdio -show-cursor
 
 debug:
 	make img
