--- a/27_day/harib24g/haribote/Makefile
+++ b/27_day/harib24g/haribote/Makefile
@@ -1,79 +1,70 @@
-OBJS_BOOTPACK = bootpack.obj naskfunc.obj hankaku.obj graphic.obj dsctbl.obj \
-		int.obj fifo.obj keyboard.obj mouse.obj memory.obj sheet.obj timer.obj \
-		mtask.obj window.obj console.obj file.obj
+CC = gcc
+CFLAGS = -c -m32 -nostdlib -fno-pic -fno-builtin -g
 
-TOOLPATH = ../../z_tools/
-INCPATH  = ../../z_tools/haribote/
+#--------------------
+#	hankaku char
+#--------------------
+convHankakuTxt : convHankakuTxt.c 
+	$(CC) $< -o $@
 
-MAKE     = $(TOOLPATH)make.exe -r
-NASK     = $(TOOLPATH)nask.exe
-CC1      = $(TOOLPATH)cc1.exe -I$(INCPATH) -Os -Wall -quiet
-GAS2NASK = $(TOOLPATH)gas2nask.exe -a
-OBJ2BIM  = $(TOOLPATH)obj2bim.exe
-MAKEFONT = $(TOOLPATH)makefont.exe
-BIN2OBJ  = $(TOOLPATH)bin2obj.exe
-BIM2HRB  = $(TOOLPATH)bim2hrb.exe
-RULEFILE = ../haribote.rul
-EDIMG    = $(TOOLPATH)edimg.exe
-IMGTOL   = $(TOOLPATH)imgtol.com
-GOLIB    = $(TOOLPATH)golib00.exe 
-COPY     = copy
-DEL      = del
+hankaku.c : hankaku.txt convHankakuTxt Makefile
+	./convHankakuTxt
 
-# デフォルト動作
+#--------------------
+# os boot loader
+#--------------------
+ipl.bin : ipl.asm 
+	nasm $< -o $@ -l ipl.lst
 
+asmhead.bin : asmhead.asm
+	nasm $< -o $@ -l asmhead.lst
+
+nasmfunc.o : nasmfunc.asm
+	nasm -f elf $< -o $@ -l nasmfunc.lst
+
+#--------------------
+# os system 
+#--------------------
+%.o : %.c
+	$(CC) $(CFLAGS) $*.c -o $*.o
+
+OBJS_BOOTPACK = bootpack.o nasmfunc.o hankaku.o fifo.o int.o keyboard.o \
+	mouse.o memory.o mysprintf.o graphic.o dsctbl.o sheet.o timer.o \
+	mtask.o console.o window.o file.o 
+bootpack.hrb : $(OBJS_BOOTPACK) Makefile
+	ld -m elf_i386 -T har.ld $(OBJS_BOOTPACK) -o $@ -M=bootpack.map
+
+haribote.sys : ipl.bin asmhead.bin bootpack.hrb Makefile
+	cat asmhead.bin bootpack.hrb > haribote.sys
+
+haribote.img : haribote.sys Makefile
+	mformat -f 1440 -C -B ipl.bin -i haribote.img ::
+	mcopy haribote.sys -i haribote.img ::
+	mcopy ipl.asm -i haribote.img ::
+	mcopy make.bat -i haribote.img ::
+
+#--------------------
+#  
+#--------------------
 default :
-	$(MAKE) ipl10.bin
-	$(MAKE) haribote.sys
+	make run
 
-# ファイル生成規則
+img :
+	make haribote.img
 
-ipl10.bin : ipl10.nas Makefile
-	$(NASK) ipl10.nas ipl10.bin ipl10.lst
+run :
+	make img
 
-asmhead.bin : asmhead.nas Makefile
-	$(NASK) asmhead.nas asmhead.bin asmhead.lst
-
-hankaku.bin : hankaku.txt Makefile
-	$(MAKEFONT) hankaku.txt hankaku.bin
-
-hankaku.obj : hankaku.bin Makefile
-	$(BIN2OBJ) hankaku.bin hankaku.obj _hankaku
-
-bootpack.bim : $(OBJS_BOOTPACK) Makefile
-	$(OBJ2BIM) @$(RULEFILE) out:bootpack.bim stack:3136k map:bootpack.map \
-		$(OBJS_BOOTPACK)
-# 3MB+64KB=3136KB
-
-bootpack.hrb : bootpack.bim Makefile
-	$(BIM2HRB) bootpack.bim bootpack.hrb 0
-
-haribote.sys : asmhead.bin bootpack.hrb Makefile
-	copy /B asmhead.bin+bootpack.hrb haribote.sys
-
-# 一般規則
-
-%.gas : %.c bootpack.h Makefile
-	$(CC1) -o $*.gas $*.c
-
-%.nas : %.gas Makefile
-	$(GAS2NASK) $*.gas $*.nas
-
-%.obj : %.nas Makefile
-	$(NASK) $*.nas $*.obj $*.lst
-
-# コマンド
+debug:
+	make img
 
 clean :
-	-$(DEL) asmhead.bin
-	-$(DEL) hankaku.bin
-	-$(DEL) *.lst
-	-$(DEL) *.obj
-	-$(DEL) *.map
-	-$(DEL) *.bim
-	-$(DEL) *.hrb
+	rm *.o
+	rm *.lst
+	rm *.bin
+	rm *.hrb
+	rm *.sys
 
 src_only :
-	$(MAKE) clean
-	-$(DEL) ipl10.bin
-	-$(DEL) haribote.sys
+	rm haribote.img
+	make clean
