--- a/27_day/harib24g/apilib/Makefile
+++ b/27_day/harib24g/apilib/Makefile
@@ -1,47 +1,27 @@
-OBJS_API =	api001.obj api002.obj api003.obj api004.obj api005.obj api006.obj \
-			api007.obj api008.obj api009.obj api010.obj api011.obj api012.obj \
-			api013.obj api014.obj api015.obj api016.obj api017.obj api018.obj \
-			api019.obj api020.obj
+#--------------------
+# api -T api.ld 
+#--------------------
+OBJS_API = api001.o api002.o api004.o api005.o api015.o
+%.o : %.asm
+	nasm -f elf $*.asm -o $*.o -l $*.lst 
+apilib.lib: $(OBJS_API)
+	ld -m elf_i386 $(OBJS_API) -o apilib.lib -M=apilib.map
 
-TOOLPATH = ../../z_tools/
-INCPATH  = ../../z_tools/haribote/
-
-MAKE     = $(TOOLPATH)make.exe -r
-NASK     = $(TOOLPATH)nask.exe
-CC1      = $(TOOLPATH)cc1.exe -I$(INCPATH) -Os -Wall -quiet
-GAS2NASK = $(TOOLPATH)gas2nask.exe -a
-OBJ2BIM  = $(TOOLPATH)obj2bim.exe
-MAKEFONT = $(TOOLPATH)makefont.exe
-BIN2OBJ  = $(TOOLPATH)bin2obj.exe
-BIM2HRB  = $(TOOLPATH)bim2hrb.exe
-RULEFILE = ../haribote.rul
-EDIMG    = $(TOOLPATH)edimg.exe
-IMGTOL   = $(TOOLPATH)imgtol.com
-GOLIB    = $(TOOLPATH)golib00.exe 
-COPY     = copy
-DEL      = del
-
-# デフォルト動作
-
+#--------------------
+#  
+#--------------------
 default :
-	$(MAKE) apilib.lib
+	make run
 
-# ファイル生成規則
-
-apilib.lib : Makefile $(OBJS_API)
-	$(GOLIB) $(OBJS_API) out:apilib.lib
-
-# 一般規則
-
-%.obj : %.nas Makefile
-	$(NASK) $*.nas $*.obj $*.lst
-
-# コマンド
+run :
+	make apilib.lib
 
 clean :
-	-$(DEL) *.lst
-	-$(DEL) *.obj
+	rm *.o
+	rm *.lst
+	rm *.map
+	rm *.lib
 
 src_only :
-	$(MAKE) clean
-	-$(DEL) apilib.lib
+	rm haribote.img
+	make clean
